[gd_scene load_steps=13 format=2]

[ext_resource path="res://input/Input.gd" type="Script" id=1]
[ext_resource path="res://plex_mono_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://rooms/Room.tscn" type="PackedScene" id=4]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=5]
[ext_resource path="res://rooms/RoomManager.gd" type="Script" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://GameInfo.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Node" parent="."]
script = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 5 )

[node name="BackGround" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BackGround"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="BackGround/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 15

[node name="GameInfo" parent="BackGround/MarginContainer/Rows" instance=ExtResource( 8 )]
margin_bottom = 475.0

[node name="InputArea" type="PanelContainer" parent="BackGround/MarginContainer/Rows"]
margin_top = 490.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 70 )
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="BackGround/MarginContainer/Rows/InputArea"]
margin_right = 984.0
margin_bottom = 70.0

[node name="Caret" type="Label" parent="BackGround/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_top = 16.0
margin_right = 51.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
text = " > "

[node name="Input" type="LineEdit" parent="BackGround/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_left = 55.0
margin_right = 984.0
margin_bottom = 70.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
max_length = 48
script = ExtResource( 1 )

[node name="RoomManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="EmptyRoom" parent="RoomManager" instance=ExtResource( 4 )]
margin_left = -591.0
margin_top = -532.0
margin_right = -341.0
margin_bottom = -332.0
room_name = "白色房間"
room_id = "white_room"
room_description = "這是一個白色的房間，有個男人站在你眼前。"
enter_story = ""

[node name="DeveloperRoom" parent="RoomManager" instance=ExtResource( 4 )]
margin_left = -916.0
margin_top = -531.0
margin_right = -666.0
margin_bottom = -331.0
room_name = "開發者小屋"
room_id = "developer_room"
room_description = "這是所破舊的公寓，開發者的靈魂正在電腦桌前睡覺。"
enter_story = ""

[node name="TrainingRoom" parent="RoomManager" instance=ExtResource( 4 )]
margin_left = -292.0
margin_top = -525.0
margin_right = -42.0
margin_bottom = -325.0
room_name = "練習間"
room_id = "training_room"
room_description = "這是一個白色的房間，有個木樁立在中間，一位古裝打扮的男人倚在房間的另一邊。"
enter_story = ""

[node name="Unkown" parent="RoomManager" instance=ExtResource( 4 )]
margin_left = -1198.0
margin_top = -529.0
margin_right = -948.0
margin_bottom = -329.0
room_name = "未知"
room_id = "unkown"
room_description = "一片漆黑，地上有把黑色鑰匙。"
enter_story = ""

[node name="Outside" parent="RoomManager" instance=ExtResource( 4 )]
margin_left = -589.0
margin_top = -783.0
margin_right = -339.0
margin_bottom = -583.0
room_name = "白色虛空"
room_id = "white_void"
room_description = "你走出了白色房間，外面是一望無際的白色虛空......"
enter_story = ""

[node name="WoodHouse" parent="RoomManager" instance=ExtResource( 4 )]
margin_left = 418.0
margin_top = -812.0
margin_right = 668.0
margin_bottom = -612.0
room_name = "簡陋木屋"
room_id = "wood_house"
room_description = "這是一個簡陋的木屋。"
enter_story = ""

[connection signal="text_entered" from="BackGround/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="BackGround/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="BackGround/MarginContainer/Rows/InputArea/HBoxContainer/Input" method="_on_Input_text_entered"]
